# AgentMem

./: .gitignore  Cargo.toml  FINAL_ANALYSIS_COMPREHENSIVE.md  FINAL_VERIFICATION_REPORT.md  IMPLEMENTATION_PHASE3_SUMMARY.md  MANUAL_COMMIT_REQUIRED.md  Memvid.md  PERFORMANCE_ANALYSIS.md  PHASE0_2_EXECUTIVE_SUMMARY.md  PHASE0_3_ERROR_HANDLING_ANALYSIS.md  PHASE0_3_IMPLEMENTATION_SUMMARY.md  PROMPT.md  README.md  SQL_INJECTION_AUDIT_REPORT.md  TEST_ANALYSIS_REPORT.md  TODO_CN.md  V4_README.md  agentmem1.1.md  agentmem1.1.md.bak2  agentmem1.2.md  agentmem1.5.md  agentmem1.6.md  arch101.md  generate_accurate_arch.py  generate_arch_diagrams.py  generate_arch_with_ui.py  mem111.md  mem112.md  mem113.md  pj.md  plan26.md  plan27.md  plan28.md  plan29.md  plan30.md  plan32.md  plan33.md  rustfmt.toml  test_agentmem_real.py  testx1.0.md  (+4 more)
.claude/: settings.local.json
.playwright-mcp/: page-2026-05-22T10-33-28-965Z.yml  page-2026-05-22T10-33-39-040Z.yml  page-2026-05-22T10-33-49-238Z.yml  page-2026-05-22T10-34-03-129Z.yml  page-2026-05-22T10-34-05-699Z.yml  page-2026-05-22T10-34-22-509Z.yml  page-2026-05-22T10-34-34-248Z.yml  page-2026-05-22T10-34-38-243Z.yml  page-2026-05-22T10-34-52-291Z.yml  page-2026-05-22T10-34-54-556Z.yml  page-2026-05-22T10-35-31-971Z.yml  page-2026-05-22T10-36-30-356Z.yml  page-2026-05-22T10-36-38-705Z.yml  page-2026-05-22T10-36-51-240Z.yml  page-2026-05-22T10-37-09-018Z.yml  page-2026-05-22T10-37-22-125Z.yml  page-2026-05-22T10-37-24-721Z.yml  page-2026-05-22T10-37-43-358Z.yml  page-2026-05-22T10-37-51-841Z.yml  page-2026-05-22T10-37-59-922Z.yml  page-2026-05-22T10-38-15-062Z.yml  page-2026-05-22T10-38-22-930Z.yml
.ralph/: LOOP_STATUS.md  current-events  current-loop-id  events-20260301-045852.jsonl  events-20260301-051144.jsonl  events-20260301-052128.jsonl  events-20260301-054101.jsonl  events-20260301-054859.jsonl  events-20260301-060142.jsonl  events-20260301-060738.jsonl  events-20260301-061753.jsonl  events-20260301-062151.jsonl  events-20260301-062835.jsonl  events-20260301-065348.jsonl  events-20260301-093455.jsonl  events-20260301-095645.jsonl  events-20260318-025159.jsonl  events-20260318-061437.jsonl  events-20260318-065034.jsonl  events-20260318-072904.jsonl  events-20260318-095340.jsonl  events-20260318-104808.jsonl  events-20260318-111527.jsonl  events-20260318-113727.jsonl  events-20260318-141558.jsonl  events-20260318-142539.jsonl  events-20260318-143207.jsonl  events-20260318-143455.jsonl  events-20260319-001401.jsonl  events-20260319-034133.jsonl  events-20260319-075047.jsonl  events-20260319-115533.jsonl  events-20260319-124535.jsonl  events-20260319-132730.jsonl  history.jsonl
.ralph/agent/: decisions.md  handoff.md  memories.md  plan1.1.1-status.md  scratchpad.md  summary.md  tasks.jsonl
.ralph/events/: blocked-20260319-084000.json  blocked-20260319-155500.json  blocked-20260319-161000.json  task-done-20260319-d11-d12-cleanup.json  task-done-20260319-d14.json  task.done
.serena/: project.yml
.serena/memories/: agentmem1.5_complete_with_tests.md  agentmem1.5_final_complete.md  agentmem1.5_final_summary.md  agentmem1.5_phase1_phase2_completed.md  agentmem1.5_task_completion_summary.md
agentmem-ui/: package.json  pnpm-lock.yaml
benches/: v4_api_benchmark.rs
claudedocs/: agentmem-reform-executive-summary.md  agentmem-reform-summary.md  agentmem1.5-verification-report.md
claudedocs/archived/: ARCHITECTURE_ANALYSIS.md  IMPLEMENTATION_PHASE2_SUMMARY.md  IMPLEMENTATION_PROGRESS.md  IMPLEMENTATION_SUMMARY.md  Memvid.md  PERFORMANCE_REPORT.md  PHASE0_1_EXECUTIVE_SUMMARY.md  PHASE0_1_SQL_INJECTION_FIX_COMPLETE.md  PHASE0_2_INPUT_VALIDATION_COMPLETE.md  PHASE0_3_1_P0_FIXES_COMPLETE.md  PHASE0_3_2_P1_FIXES_COMPLETE.md  PHASE0_3_3_P2_EVALUATION_COMPLETE.md  PHASE0_3_MIGRATION_GUIDE.md  PHASE0_FINAL_SUMMARY.md  PHASE0_PROGRESS_SUMMARY.md  PHASE1_COMPLETED.md  PHASE1_SUMMARY.md  PHASE2_COMPLETED.md  PHASE_SUMMARY.md  REBASE_RESOLUTION_SUMMARY.md  VERIFICATION_REPORT.md  agentmem-performance-analysis.md  agentmem-vs-mem0-analysis.md  agentmem1.1-status.md  agentmem1.1.md  agentmem1.2.md  agentmem1.3.md  agentmem1.4.md  agentmem1.5-implementation-complete.md  agentmem1.5-test-report.md  agentmem1.6.md  circular-dependency-analysis.md
crates/agent-mem-category/: Cargo.toml  README.md
crates/agent-mem-category/src/: error.rs  lib.rs  manager.rs
crates/agent-mem-category/src/models/: category.rs  mod.rs  path.rs  tree.rs
crates/agent-mem-core/: Cargo.toml
crates/agent-mem-embeddings/: Cargo.toml
crates/agent-mem-extraction/: Cargo.toml  README.md
crates/agent-mem-extraction/src/: error.rs  lib.rs  models.rs  pipeline.rs  stage.rs
crates/agent-mem-extraction/src/stages/: categorizer.rs  deduper.rs  extractor.rs  indexer.rs  ingestor.rs  mod.rs  preprocessor.rs  response.rs
crates/agent-mem-memvid/: Cargo.toml
crates/agent-mem-memvid/benches/: memvid_bench.rs
crates/agent-mem-memvid/src/: advanced_search.rs  benchmarks.rs  conversion.rs  embedding.rs  error.rs  integration_tests.rs  lib.rs  memvid_store.rs  search.rs  store.rs  store_trait.rs  timeline.rs  vector_search.rs
crates/agent-mem-proactive/: Cargo.toml
crates/agent-mem-proactive/src/: agent.rs  error.rs  executors.rs  lib.rs  scheduler.rs
crates/agent-mem-proactive/src/executors/: auto_categorize.rs  dedupe_merge.rs  generate_summaries.rs  health_check.rs  index_optimization.rs  resource_archival.rs
crates/agent-mem-proactive/src/models/: config.rs  mod.rs  scheduler.rs  task.rs
crates/agent-mem-resource/: Cargo.toml  IMPLEMENTATION_SUMMARY.md  README.md
crates/agent-mem-resource/src/: detector.rs  error.rs  lib.rs  manager.rs  resolver.rs
crates/agent-mem-resource/src/models/: mod.rs
docs/: quickstart.md
examples/: cache_stats_example.rs  cached_embedder_perf_test.rs
examples/working-memory-demo/: Cargo.toml
examples/working-memory-demo/src/: main.rs
scripts/: test_phase1_phase2.sh  verify_implementation.sh
tests/: test_100_rounds.py  test_mem0_benchmark.py  test_memory_effect_python.py  test_persistence.py  test_recall_metrics.py
(+279 files in other folders)
