[package]
name = "agent-mem-extraction"
version = "0.1.0"
edition = "2021"
authors = ["AgentMem Team"]
description = "Extraction pipeline framework for AgentMem file-centric memory system"
license = "MIT OR Apache-2.0"
keywords = ["memory", "extraction", "pipeline", "agent", "ai"]
categories = ["data-structures", "asynchronous"]

[dependencies]
# Async runtime
tokio = { version = "1.35", features = ["full"] }
async-trait = "0.1"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Error handling
anyhow = "1.0"
thiserror = "1.0"

# Date/time
chrono = { version = "0.4", features = ["serde"] }

# Tracing
tracing = "0.1"

# UUID generation
uuid = { version = "1.6", features = ["v4", "serde"] }

# Internal dependencies (uncomment when available)
# agent-mem-resource = { path = "../agent-mem-resource" }
# agent-mem-category = { path = "../agent-mem-category" }

[dev-dependencies]
tokio-test = "0.4"
