[package]
name = "agent-mem-proactive"
version = "0.1.0"
edition = "2021"
authors = ["AgentMem Team"]
description = "ProactiveAgent for background memory organization - 24/7 automatic memory maintenance"
license = "Apache-2.0"

[dependencies]
# Async runtime
tokio = { version = "1.35", features = ["full"] }
async-trait = "0.1"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Error handling
thiserror = "1.0"
anyhow = "1.0"

# ID generation
uuid = { version = "1.6", features = ["v4", "serde"] }

# Date/time
chrono = { version = "0.4", features = ["serde"] }
croner = "2.2"

# Task scheduling
tokio-cron-scheduler = "0.12"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Existing AgentMem integrations
agent-mem-category = { path = "../agent-mem-category" }
agent-mem-traits = { path = "../agent-mem-traits" }

[dev-dependencies]
tokio-test = "0.4"
tokio = { version = "1.35", features = ["test-util", "macros"] }

[features]
default = []
# category-integration = ["agent-mem-category"]
# resource-integration = ["agent-mem-resource"]
