[package]
name = "agent-mem-resource"
version = "0.1.0"
edition = "2021"

[dependencies]
# Core dependencies
uuid = { version = "1.10", features = ["v4", "serde"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = { version = "0.4", features = ["serde"] }
thiserror = "1.0"
async-trait = "0.1"
tokio = { version = "1.40", features = ["full"] }
regex = "1.11"
reqwest = { version = "0.12", features = ["json"] }

# AgentMem internal dependencies
agent-mem-traits = { path = "../agent-mem-traits" }
agent-mem-utils = { path = "../agent-mem-utils" }

[dev-dependencies]
tokio-test = "0.4"
tempfile = "3.12"
